# robot2t

./: CMakeLists.txt  package.xml
config/: mapper_params_online_async.yaml  nav2_params.yaml
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  ydlidar.xacro
launch/: display.launch.py  launch_sim.launch.py  navigation.launch.py  real_robot.launch.py  rsp.launch.py  slam.launch.py
meshes/: wheels.stl
